fix styles on scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,10 @@
 }
 
 body {
+  overflow-y: scroll;
+}
+
+body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
